--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo",
   "version": "0.1.0",
-  "homepage": "https://github.com/Harshal6927/todo-react",
+  "homepage": "https://Harshal6927.github.io/Harshal6927/todo-react",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
